--- a/views/wikipage.html
+++ b/views/wikipage.html
@@ -2,10 +2,18 @@
 
 {% block content %}
   <h3>{{page.title}}<small> (<a href="{{page.urlTitle}}/similar">Similar</a>)</small></h3>
-  <h4>by <a href="PLACEHOLDER-AUTHOR-URL">PLACEHOLDER AUTHOR NAME</a></h4>
-  <div>PLACEHOLDER TAG LIST</div>
+  <h4>by <a href="{{page.author.route}}">{{page.author.name}}</a></h4>
+  <div>
+      <ul class="list-inline">
+          {% for tag in page.tags %}
+          <li>
+              {{tag}}
+          </li>
+          {% endfor %}
+      </ul>
+  </div>
   <hr/>
-  <div>PLACEHOLDER AUTHOR NAME WITH LINK TO AUTHOR PAGE</div>
+  <div><a href="{{page.author.route}}">{{page.author.name}}</a></div>
   <div class="page-body">{{page.content}}</div>
   <hr/>
   <a href="{{page.urlTitle}}/edit" class="btn btn-primary">edit this page</a>
